force-app/main/default/objects/Integration_Error_Log__c/fields/Fixed_by__c.field-meta.xml
<CustomField>
    <fullName>Fixed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fixed by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Integration_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>