force-app/main/default/objects/Integration_Error_Log__c/fields/Fulfillment_Item__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fulfillment Item</label>
    <referenceTo>Fulfillment_Item__c</referenceTo>
    <relationshipLabel>Integration Error Logs</relationshipLabel>
    <relationshipName>Integration_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>