force-app/main/default/objects/Integration_Error_Log__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>ccrz__E_Order__c</referenceTo>
    <relationshipLabel>Integration Error Logs</relationshipLabel>
    <relationshipName>Integration_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>