force-app/main/default/objects/Integration_Error_Log__c/fields/Parent_Integration_Error_Log__c.field-meta.xml
<CustomField>
    <fullName>Parent_Integration_Error_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Integration Error Log</label>
    <referenceTo>Integration_Error_Log__c</referenceTo>
    <relationshipLabel>Integration Error Logs</relationshipLabel>
    <relationshipName>Integration_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>